Mise a jour projet: GUI, configuration, captures et correctifs